--- a/style.css
+++ b/style.css
@@ -25,4 +25,5 @@ background-size: contain;
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
+    color: var(--branco-principal);
 }
