--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 :root{
-    --branco-principal:#FFFFFF;
-    --cinza-secundario:#C0C0C0;
-    --botao-azul:#167BF7;
-    --cor-de-fundo:#00030C;
-    }
+  --branco-principal:#FFFFFF;
+  --cinza-secundario:#C0C0C0;
+  --botao-azul:#167BF7;
+  --cor-de-fundo:#00030C;
+  }
 body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
+  background-color: var(--cor-de-fundo);
+  color: var(--branco-principal);
 }
 *{
-  margin: 0;  
-  padding: 0;
+margin: 0;  
+padding: 0;
 }
 .principal{
 background-image: url(Background.png);
@@ -18,12 +18,14 @@ background-repeat: no-repeat;
 background-size: contain;
 }
 .container{
-  height: 100vh;
+height: 100vh;
+display: grid;
+grid-template-columns: 50% , 50%;
 }
-
-.container_botao{
-    background-color: var(--botao-azul);
-    border-radius: 5px;
-    padding: 1em;
-    color: var(--branco-principal);
+.conteiner_botao{
+background-color: var(--botao-azul);
+border-radius: 10px;
+padding: 1em;
+color: var(--branco-principal);
+display: block;
 }
